--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>TradeETronics</title>
+		<title>Trade-eTronics</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 			<div id="header">
 				<span class="logo icon fa-paper-plane-o"></span>
 				<h1>TradeETronics.</h1>
-				<p>A E-Broker for your E-Waste <a href="http://html5up.net">HTML5 UP</a>
+				<p>A e-broker for your e-waste <a href="http://html5up.net">HTML5 UP</a>
 				<br />
 				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 			</div>
