--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<div id="header">
 				<span class="logo icon fa-paper-plane-o"></span>
 				<h1>TradeETronics.</h1>
-				<p>A e-broker for your e-waste <a href="http://html5up.net">HTML5 UP</a>
+				<p>A e-broker for your e-waste <a href="http://html5up.net"></a>
 				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				 <a href="http://html5up.net/license"></a>.</p>
 			</div>
 
 		<!-- Main -->
